--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,10 +2,10 @@ project:
   type: website
 
 website:
-  title: "Quarto Website"
-  repo-url: https://github.com/DevPsyLab/QuartoWebsite
+  title: "2026 CSSI Workshop on Longitudinal Data Analysis"
+  repo-url: https://github.com/isaactpetersen/ldaWorkshop-CSSI2026
   repo-actions: [edit, source, issue]
-  google-analytics: G-NLF0RWB1CE
+  google-analytics: GT-EG2ZSZZ7EP
   navbar:
     logo: images/labLogo.png
     search: true
@@ -13,9 +13,9 @@ website:
       - icon: github
         menu:
           - text: "Source Code"
-            href: https://github.com/DevPsyLab/QuartoWebsite
+            href: https://github.com/isaactpetersen/ldaWorkshop-CSSI2026
           - text: "Report a Bug"
-            href: https://github.com/DevPsyLab/QuartoWebsite/issues/new
+            href: https://github.com/isaactpetersen/ldaWorkshop-CSSI2026/issues/new
       - icon: twitter
         href: https://twitter.com/devpsylab
       - icon: facebook
