--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,10 +27,11 @@ website:
         text: Home
       - text: Links
         menu:
-        - text: Lab Wiki
-          href: https://devpsylab.github.io/LabWiki/
-        - text: Data Analysis Guides
-          href: https://devpsylab.github.io/DataAnalysis
+        - data-manipulation.qmd
+        - data-visualization.qmd
+        - mixed-effects-models.qmd
+        - structural-equation-models.qmd
+        - missing-data.qmd
       - about.qmd
     right:
     - text: "Lab Wiki"
@@ -66,5 +67,5 @@ format:
     author-meta: "Isaac T. Petersen"
     date-meta: today
 
-lightbox: 
+lightbox:
   match: auto
