20260105 - tests of longitudinal measurement invariance

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,8 +19,9 @@ Imports:
   MuMIn,
   lavaan,
   semTools,
-  lavaanPlot,
   lcsm,
+  lavaanPlot,
+  lavaangui,
   petersenlab
 Remotes:
   DevPsyLab/petersenlab
